style: correct the alignment and the dimensions of the photo preview and placeholder

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -399,6 +399,67 @@ html:not(.ready) .sidebar .text {
 
 }
 
+/* ---------------------------*/
+/*    STUDENT PHOTO UPLOAD    */
+/* --------------------------*/
+.add-student-photo{
+   position: relative; 
+   width: 120px; 
+   height: 120px; 
+   margin: 0 auto;
+}
+
+.add-student-photo #addPhotoPreview{
+   position: absolute; 
+   top: 0; 
+   left: 0; 
+   width: 120px; 
+   height: 120px; 
+   object-fit: cover; 
+   border: 3px solid #dee2e6; 
+   display: none; 
+   z-index: 2;
+}
+
+.add-student-photo #addPhotoPlaceholder{
+    position: absolute; 
+    top: 0; 
+    left: 0;
+    width: 120px; 
+    height: 120px; 
+    border: 3px dashed #dee2e6; 
+    z-index: 1
+}
+
+.edit-student-photo{
+   position: relative; 
+   width: 120px; 
+   height: 120px; 
+   margin: 0 auto;
+}
+
+.edit-student-photo #editPhotoPreview{
+   position: absolute; 
+   top: 0; 
+   left: 0; 
+   width: 120px; 
+   height: 120px; 
+   object-fit: cover; 
+   border: 3px solid #dee2e6; 
+   display: none; 
+   z-index: 2;
+}
+
+.edit-student-photo #editPhotoPlaceholder{
+    position: absolute; 
+    top: 0; 
+    left: 0;
+    width: 120px; 
+    height: 120px; 
+    border: 3px dashed #dee2e6; 
+    z-index: 1
+}
+
 /* --------------------------------------------  */
 /*      DATA TABLE LIGHT MODE CUSTOMIZATION     */
 /* --------------------------------------------*/
